added stateful set get/delete/list methods
